<resources>
    <string name="app_name">AnimalLovers</string>
    <string name="txt_login_button">Inscrever-se</string>
    <string name="content_app_logo">Logo do APP AnimaLovers</string>
    <string name="txt_have_account">Já possui uma conta?</string>
    <string name="txt_login_btn">Login</string>
    <string name="txt_realize_register">Para continuar, realize o seu cadastro.</string>
    <string name="txt_email_user">Digite seu e-mail</string>
    <string name="txt_password_again">Repita sua senha</string>
    <string name="txt_password">Digite sua senha</string>
    <string name="txt_create">Criar</string>
    <string name="txt_realize_login">Para continuar, realize o login.</string>
    <string name="txt_email_login">Digite seu e-mail</string>
    <string name="txt_password_login">Digite sua senha</string>
    <string name="txt_create_account">Criar conta</string>
    <string name="txt_forget_password">Esqueci minha senha</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txt_sair">Sair</string>
    <string name="txt_clinicas">Clínicas Veterinarias</string>
    <string name="txt_combinar">Combinar Pets</string>

    <string name="txt_alterar">Alterar dados</string>
    <string name="txt_configs">Configurações</string>
    <string name="txt_nome_padrao">Guilherme</string>
    <string name="txt_local_padrao">Brasil - SP</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="txt_mais">Mais</string>
    <string name="txt_foryou">Para Você</string>
    <string name="txt_add">Adicionar</string>
    <string name="txt_search">Pesquisar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_descobrir">Descobrir</string>
    <string name="txt_logo_feed">Logo AnimaLovers</string>
    <string name="txt_procurar">Botão Procurar</string>
    <string name="txt_dehaze_feed">Botão abrir barra lateral</string>
    <string name="txt_what_do_you_think">No que você está pensando ?</string>
    <string name="txt_publishment">Publicar</string>
    <string name="txt_gui_taka">Guilherme Takahashi</string>
    <string name="txt_summary">Resumo</string>
    <string name="txt_animal_name">Nome do animal</string>
</resources>