<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagemfundo"
    tools:context=".ui.activity.SplashActivity">

    <ImageView
        android:id="@+id/logo_animaLovers_splash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="44dp"
        android:contentDescription="@string/content_app_logo"
        android:src="@drawable/animalovers_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_inscrever"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="130dp"
        app:layout_constraintHorizontal_bias="0.5"
        android:background="@drawable/background_button_red"
        android:elevation="10dp"

        android:text="@string/txt_login_btn"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/txt_possui_conta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_animaLovers_splash"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_possui_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="114dp"
        android:layout_marginTop="12dp"
        android:text="@string/txt_have_account"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_inscrever" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_button_transparent_login"
        android:text="@string/txt_login_button"
        android:textAllCaps="false"
        android:textColor="@color/color_login_button_transparent"
        app:layout_constraintBottom_toBottomOf="@id/txt_possui_conta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/txt_possui_conta"
        app:layout_constraintTop_toBottomOf="@id/btn_inscrever" />

</androidx.constraintlayout.widget.ConstraintLayout>