<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imagemfundo"
    tools:context=".ui.activity.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/logo_animaLovers_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="105dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="120dp"
                android:contentDescription="@string/content_app_logo"
                android:src="@drawable/animalovers_logo_simples"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_to_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_realize_register"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo_animaLovers_register" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="39dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="43dp"
                android:background="@drawable/background_login_input"
                android:focusable="true"
                android:hint="@string/txt_email_user"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textAlignment="center"
                android:textColor="@color/colorLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_to_continue" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/background_login_input"
                android:focusable="true"
                android:hint="@string/txt_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textAlignment="center"
                android:textColor="@color/colorLogin"
                app:layout_constraintEnd_toEndOf="@id/et_email"
                app:layout_constraintStart_toStartOf="@id/et_email"
                app:layout_constraintTop_toBottomOf="@id/et_email" />

            <EditText
                android:id="@+id/et_ag_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_login_input"
                android:hint="@string/txt_password_again"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textAlignment="center"
                android:textColor="@color/colorLogin"
                app:layout_constraintEnd_toEndOf="@id/et_password"
                app:layout_constraintStart_toStartOf="@id/et_password"
                app:layout_constraintTop_toBottomOf="@id/et_password" />

            <Button
                android:id="@+id/btn_criar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:background="@drawable/background_button_red"
                android:text="@string/txt_create"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="@id/et_ag_password"
                app:layout_constraintStart_toStartOf="@id/et_ag_password"
                app:layout_constraintTop_toBottomOf="@id/et_ag_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>