<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ProfileActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_animal_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="32dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@id/card_person_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_animal_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/txt_animal_name"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_animal_photo"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="64dp"
                android:padding="40dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintBottom_toTopOf="@id/tv_summary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_animal_name"
                app:layout_constraintTop_toBottomOf="@id/tv_animal_name" />

            <TextView
                android:id="@+id/tv_animal_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sexo:"
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toStartOf="@id/tv_animal_age"
                app:layout_constraintStart_toStartOf="@id/tv_animal_name"
                app:layout_constraintTop_toBottomOf="@id/iv_animal_photo" />

            <TextView
                android:id="@+id/tv_animal_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Idade:"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/tv_animal_weight"
                app:layout_constraintStart_toEndOf="@id/tv_animal_sex"
                app:layout_constraintTop_toTopOf="@id/tv_animal_sex" />

            <TextView
                android:id="@+id/tv_animal_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Peso:"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_animal_age"
                app:layout_constraintTop_toTopOf="@id/tv_animal_sex" />

            <TextView
                android:id="@+id/tv_animal_sex_write"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Macho"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/iv_animal_photo"
                app:layout_constraintTop_toBottomOf="@id/tv_animal_sex" />

            <TextView
                android:id="@+id/tv_animal_age_write"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3 anos"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/tv_animal_weight_write"
                app:layout_constraintHorizontal_bias="0.48"
                app:layout_constraintStart_toEndOf="@id/tv_animal_sex_write"
                app:layout_constraintTop_toTopOf="@id/tv_animal_sex_write" />

            <TextView
                android:id="@+id/tv_animal_weight_write"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5 Kilos"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_animal_age_write"
                app:layout_constraintTop_toTopOf="@id/tv_animal_sex_write" />


            <TextView
                android:id="@+id/tv_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="8dp"
                android:text="@string/txt_summary"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@id/tv_animal_sex_write"
                app:layout_constraintBottom_toTopOf="@id/tv_summary_text"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_summary_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="Animal muito amigável e bem comportado."
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_summary" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_person_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="32dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_animal_profile"
        app:layout_constraintVertical_bias="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="Contato pessoal"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />

            <ImageView
                android:id="@+id/iv_photo_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@mipmap/ic_launcher_round"
                app:layout_constraintStart_toStartOf="@id/tv_contact"
                app:layout_constraintTop_toBottomOf="@id/tv_contact" />

            <TextView
                android:id="@+id/tv_name_contact_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_gui_taka"
                app:layout_constraintBottom_toBottomOf="@id/iv_photo_contact"
                app:layout_constraintStart_toEndOf="@id/iv_photo_contact"
                app:layout_constraintTop_toBottomOf="@id/tv_contact" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>